--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.2.1",
+    "@tanstack/react-query": "^5.65.1",
     "axios": "^1.7.9",
     "cloudinary": "^2.5.1",
     "datauri": "^4.1.0",
